# leetcode-solve

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
ps/: majority_element_169.py  remove_duplicates_80.py  rotate_array_189.py
